# zara-rust

./: .gitignore  Cargo.toml  README.md  logo.kra
demo/: Cargo.toml  run-debug.sh
demo/src/: diseases.rs  events.rs  injuries.rs  inventory.rs  main.rs  state.rs  ui.rs  zara_init.rs
src/: main.rs
src/zara/: body.rs  env.rs  evt.rs  health.rs  inv.rs  inventory.rs  mod.rs  player.rs  utils.rs
src/zara/body/: mod.rs
src/zara/health/: disease.rs  disease_methods.rs  mod.rs  side.rs  status_methods.rs  update.rs
src/zara/health/side/: builtin.rs
src/zara/health/side/builtin/: side_fatigue.rs  side_fluctuate.rs  side_running.rs  side_water_drain.rs
src/zara/inventory/: crud.rs  items.rs  mod.rs
src/zara/inventory/crafting/: fluent.rs  mod.rs
src/zara/utils/: event.rs  mod.rs
zara/: Cargo.toml  LICENSE  README.md
zara/src/: error.rs  lib.rs  player.rs  state.rs  status_methods.rs  update.rs  world.rs
zara/src/body/: body_appliance.rs  mod.rs  state.rs  status_methods.rs
zara/src/body/clothes/: fluent.rs  mod.rs  warmth.rs  wetness.rs
zara/src/health/: mod.rs  monitors.rs  side.rs  state.rs  status_methods.rs  update.rs
zara/src/health/disease/: chain.rs  crud.rs  fluent.rs  lerp.rs  mod.rs  state.rs  status_methods.rs
zara/src/health/injury/: chain.rs  crud.rs  fluent.rs  lerp.rs  mod.rs  state.rs  status_methods.rs
zara/src/health/medagent/: fluent.rs  lerp.rs  mod.rs  state.rs
zara/src/health/medagent/lerp/: mod.rs
zara/src/health/side/: builtin.rs
zara/src/health/side/builtin/: side_fatigue.rs  side_fluctuate.rs  side_food_drain.rs  side_running.rs  side_underwater.rs  side_water_drain.rs
zara/src/inventory/: crud.rs  items.rs  mod.rs  monitors.rs  state.rs  update.rs
zara/src/inventory/crafting/: fluent.rs  mod.rs
zara/src/utils/: event.rs  mod.rs
