[package]
name = "zara-demo"
version = "0.1.0"
authors = ["Vadim Gromov <zara-survival@imw.su>"]
edition = "2018"

[lib]
crate-type = ["lib"]
name="zara"
path="src/zara/mod.rs"
bench = false
edition = "2018"

[dependencies]
rand = "0.8.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html