[package]
name = "zara-demo"
version = "0.1.0"
authors = ["Vadim Gromov <zara-survival@imw.su>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# If you are building Zara lib separately, comment this lib
[lib]
crate-type = ["lib"]
name="zara"
bench = false
path="../zara/src/lib.rs"

[dependencies]
# If you are not using IntelliJ IDEA, uncomment this line and comment out "rand" dependency
# zara = { path = "../zara" }
rand = "0.8.2"
termion = "*"