[package]
name = "zara"
version = "1.0.3"
authors = ["Vadim Gromov <zara-survival@imw.su>"]
description = "Zara survival engine"
homepage = "https://github.com/vagrod/zara-rust"
readme = "README.md"
repository = "https://github.com/vagrod/zara-rust/"
documentation = "https://github.com/vagrod/zara-rust/wiki"
license-file = "LICENSE"
keywords = ["gamedev", "survival"]
categories = ["game-development"]
exclude = ["target", "Cargo.lock", "zara.iml"]
edition = "2018"

[dependencies]
rand = "0.8.2"